--- a/schedule/index.qmd
+++ b/schedule/index.qmd
@@ -99,6 +99,10 @@ listing:
     - **Time**: 7:00 PM -- 10:00 PM
     - **Location**: Alden 109
     - **Task**: Answer technical questions about source code
+- **Completed Computer Security Summit Project**
+    - **Date**: Thursday, December 12, 2024
+    - **Time**: 11:59 PM
+    - **Task**: Submit final report through GitHub
 
 ::: {.callout-note appearance="minimal" title="Textbook Abbreviations" collapse="false"}
 
