--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -311,10 +311,40 @@ understanding, debugging, and malware analysis:
     - [`slipcover`](https://github.com/plasma-umass/slipcover)
     - [`scalene`](https://github.com/plasma-umass/scalene)
 
-
-
 Interested in working on this project? See the [{{< iconify fa6-brands github
 size=18px >}}
 network-monitoring-starter](https://github.com/SecuritySynapse/program-tracing-starter)
 template repository to get started! Questions? Share them in the [Security
 Synapse Discord Server](https://discord.gg/juUXz7d4Jh).
+
+### Security Summit Project: Long-Term Project
+
+#### Preparation
+
+- {{< iconify fa6-solid book-open size=18px >}} **Study**: Since this project
+invites learners to propose and conduct their own independent project, it is
+important should read, in addition to additional online resources, all of the
+chapters in the following textbooks:
+  - {{< iconify fa6-solid book-open >}} Online textbook called [Computer Systems
+  Security: Planning for Success](https://web.njit.edu/~rt494/security/) 
+  - {{< iconify fa6-solid book-open >}} Online textbook called [Cracking Codes
+  with Python](https://inventwithpython.com/cracking/) 
+  - {{< iconify fa6-solid book-open >}} Online textbook called [Operating
+  Systems: Three Easy Pieces](https://pages.cs.wisc.edu/~remzi/OSTEP/) 
+
+- {{< iconify fa6-solid lightbulb size=18px >}} **Insight**: Chapter one of
+[CSP](https://web.njit.edu/~rt494/security/) explains that a server demonstrates
+*availability* if is up and running for valid users. However, if a server is
+running a process that contains a defect that results in a system crash, then
+this is a direct threat to its availability. However, since the programs that
+run on servers often have complex input spaces and implementations, it is often
+difficult to quickly find these availability threats.
+
+- {{< iconify fa6-solid code size=18px >}} **Task**: This project invites you to
+implement a `serverfuzzer` in the Python programming language that will
+automatically fuzz a specific function in a server's implementation.
+Specifically, you will implement a fuzzer that will automatically generate
+certain type of JSON inputs, submit those inputs to an in-memory server, observe
+the output and behavior of the server, and record important details and any
+crashes. As you complete the project, please be mindful that it makes certain
+restrictions of the types of JSON inputs your `serverfuzzer` should generate!
