fix: Correct phrasing for the long-term project in projects/index.qmd.

--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -323,14 +323,14 @@ Synapse Discord Server](https://discord.gg/juUXz7d4Jh).
 
 - {{< iconify fa6-solid book-open size=18px >}} **Study**: Since this project
 invites learners to propose and conduct their own independent project, it is
-important should read, in addition to additional online resources, all of the
-chapters in the following textbooks:
-  - {{< iconify fa6-solid book-open >}} [Computer Systems
-  Security: Planning for Success](https://web.njit.edu/~rt494/security/) 
-  - {{< iconify fa6-solid book-open >}} [Cracking Codes
-  with Python](https://inventwithpython.com/cracking/) 
-  - {{< iconify fa6-solid book-open >}} [Operating
-  Systems: Three Easy Pieces](https://pages.cs.wisc.edu/~remzi/OSTEP/) 
+important that they should read, in addition to additional online resources,
+all of the chapters in the following textbooks:
+  - {{< iconify fa6-solid book-open >}} [Computer Systems Security: Planning
+  for Success](https://web.njit.edu/~rt494/security/) 
+  - {{< iconify fa6-solid book-open >}} [Cracking Codes with
+  Python](https://inventwithpython.com/cracking/) 
+  - {{< iconify fa6-solid book-open >}} [Operating Systems: Three Easy
+  Pieces](https://pages.cs.wisc.edu/~remzi/OSTEP/) 
 
 - {{< iconify fa6-solid code size=18px >}} **Tasks**: This project invites you to
 complete an independent research project in the field of computer security.
