feat: Add the reminder about the sharing of the slide deck in projects/index.qmd.

--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -357,4 +357,5 @@ complete an independent research project in the field of computer security.
       - Implementation slide with a code snippet that highlights a system detail
       - Evaluation slide with a table of data or a graph with your results
       - Conclusion slide with a summary of the project and future work
+    - Share the slide deck with the instructor and the class through Discord
     - Give the lightning talk presentation on the last day of class
