--- a/index.qmd
+++ b/index.qmd
@@ -62,8 +62,10 @@ various programming languages.
 
 - The [course projects](projects/index.qmd) page furnishes descriptions of each
 two-week project that learners complete to ensure that they have suitable
-hands-on practice to make a security synapse and achieve the learning objectives
-for the course.
+hands-on practice to make a security synapse and achieve the learning
+objectives for the course. The project list also includes details about the
+long-term computer security summit project that invites learners to propose,
+conduct, and report on their own independent research project.
 
 ## Connecting Concepts to Code
 
