--- a/schedule/weektwelve/index.qmd
+++ b/schedule/weektwelve/index.qmd
@@ -20,16 +20,16 @@ Systems Security: Planning for Success](https://web.njit.edu/~rt494/security/)
 - {{< iconify fa6-solid diagram-project size=18px >}} **Monday**: Laboratory session
 - {{< iconify fa6-solid people-line size=18px >}} **Tuesday and Thursday**:
 Security Solutions
-  - Understand the trade-offs in security solutions
-  - Learn how hardware and software can be used to protect systems
-  - Learn more about the "defense in depth" strategy to security
+  - Understand the trade-offs in approaches to access control
+  - Develop more insights into multi-factor authentication
+  - Explore strategies to authentication and authorization
   - Discover how an operating system plays a critical role in security
   - Continued highlighting of the concept of a "security synapse"
   - Student presentations that feature:
-    - Explanation of a high-level concepts behind security solutions
+    - Explanation of a high-level concepts behind access control
     - In-class activity that connects concepts to real-world scenarios
-    - Hands-on examples of the operation and behavior of security solutions
-    - Demonstrate the use of a practical security solution
+    - Hands-on examples of the operation and behavior of access control methods
+    - Demonstrate the use of a practical approach to access control
 
 ## Slides
 
