fix: Remove not-needed metadata and capitalize the description in the metadata in the schedule/weektwelve/index.qmd.

--- a/schedule/weektwelve/index.qmd
+++ b/schedule/weektwelve/index.qmd
@@ -1,7 +1,6 @@
 ---
 title: "Access Controls"
-subtitle: "Exploring Ways to Securely Manage Access"
-description: "How to offer secure access to systems and data?"
+description: "How Can We Securely Access Systems and Data?"
 date: "2024-11-11"
 layout: full
 toc: true
