--- a/schedule/index.qmd
+++ b/schedule/index.qmd
@@ -78,10 +78,10 @@ listing:
     - **Time**: 2:30 -- 4:30 PM
     - **Location**: Alden 109
 - **Computer Security Summit Presentations**
-    - **Date**: Monday, December 5, 2024
+    - **Date**: Thursday, December 5, 2024
     - **Time**: 9:30 AM -- 10:45 AM
     - **Location**: Alden 109
-    - **Format**: Three to five minute lightning talks
+    - **Format**: Five to six minute lightning talks
 - **Final Executable Examination**
     - **Examination Code**: C
     - **Date**: Monday, December 9, 2024
